# chain-evaluator

./: .gitignore  HOW_TO_CONVERT.md  INSTALL.md  README.md  SUMMARY.md  check_setup.py  example_dataset.json  pyproject.toml  setup.py  test_evaluation.py
examples/: basic_usage.py
src/reasoning_evaluator/: __init__.py  cli.py  evaluator.py  models.py  utils.py
test_results/problem_0_good/: evaluation_report.json
test_results/problem_0_weak/: evaluation_report.json
