[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reasoning-evaluator"
version = "0.1.0"
description = "A comprehensive 12-dimension reasoning question evaluator with semantic analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["reasoning", "evaluation", "NLP", "semantic-analysis", "question-quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=2.0.0",
    "transformers>=4.20.0",
    "torch>=1.9.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/reasoning-evaluator"
Documentation = "https://github.com/yourusername/reasoning-evaluator#readme"
Repository = "https://github.com/yourusername/reasoning-evaluator"

[project.scripts]
reasoning-eval = "reasoning_evaluator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
reasoning_evaluator = ["*.json"]
